@@ -1,5 +1,11 @@
 2008-05-18  Michael Natterer  <mitch@gimp.org>
 
+	* app/core/gimpcurve.c: implement (de)serializing of the points
+	and samples arrays using GValueArray. Set "identity" to FALSE
+	after deserializing.
+
+2008-05-18  Michael Natterer  <mitch@gimp.org>
+
 	* libgimpconfig/gimpconfig-serialize.[ch]
 	* libgimpconfig/gimpconfig.def: add
 	gimp_config_serialize_property_by_name().
